TODO
    defaultconfig.php?
    translation-hints
    uploader localization from back-end???
    styling of uploader widget from back-end???

Version 1alpha7 - released 2012-05-02
cmb	updated czech translation (contributed by oldnema)
cmb	fixed bug: language and config were not properly included in init.php
cmb	added config option "resize default" (suggested by oldnema)
cmb	made minor improvements

Version 1alpha6 - released 2012-04-28
cmb	updated to Plupload 1.5.4
cmb	added danish translation (contributed by maeg)
cmb	added including of config and language file from init.php
cmb	adjusted system check to current requirements
cmb	added custom resize parameters for use by other plugins (suggested by Holger)
cmb	made several uploaders independent
cmb	made minor improvements
cmb	updated manual

Version 1alpha5 - intenally released 2012-04-10
cmb	updated to Plupload 1.5.3
cmb	updated to jQuery 1.7.2
cmb	added error message, if JS is disabled
cmb	added optional selectboxes for front-end use
cmb	fixed bug: parameters were not properly urlencoded
cmb	added uploader_collapsed() to display an initially hidden upload widget
cmb	added sk.js (contributed by Tata)
cmb	"namespaced" query parameters

Version 1alpha4 - internally released 2012-04-07
cmb	added function that can be called from a CMSimple page

Version 1alpha3 - released 2012-04-02
cmb	fixed bug: plugin back-end was always displayed, when register_globals is on (reported by Tata)
cmb	made minor cosmetic changes
cmb	extended copyright to 2012
cmb	prohibited direct access to init.php
cmb	implemented system check
cmb	added plugin icon
cmb	updated manual
cmb	prohibited upload to parent folders
cmb	added slovak translation (contributed by Tata)
cmb	added czech translations (contributed by oldnema)

Version 1alpha2 - released 2012-03-29
cmb	fixed bug: changing the selectbox was not possible under IE (reported by wolfgang_58)

Version 1alpha1 - released 2011-12-05
cmb	initial release